--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
+    "babelify": "^7.3.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "gulp-browserify": "^0.5.1",
     "gulp-mocha": "^2.2.0",
     "gulp-serve": "^1.2.0",
