--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.9.0",
     "babelify": "^7.3.0",
+    "expect": "^1.20.1",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-mocha": "^2.2.0",
     "gulp-serve": "^1.2.0",
     "gulp-uglify": "^1.5.3",
-    "should": "^9.0.2"
+    "jsdom": "^9.2.1",
+    "react-addons-test-utils": "^15.1.0"
   },
   "author": "Arthur Kushka",
   "license": "MIT"
