--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-mocha": "^2.2.0",
+    "gulp-rename": "^1.2.2",
     "gulp-serve": "^1.2.0",
     "gulp-uglify": "^1.5.3",
     "jsdom": "^9.2.1",
