--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-serve": "^1.2.0",
     "gulp-uglify": "^1.5.3",
+    "jquery": "^3.0.0",
     "jsdom": "^9.2.1",
     "react-addons-test-utils": "^15.1.0"
   },
