--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "name": "unidirectional-akka-redux",
   "description": "Example of unidirectional application on top of Akka, React, Redux.",
   "scripts": {
+  	"predeploy": "cp -rf ./backend ./"
   },
   "env": {
   },
