--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
-language: 
-- scala
-- node_js
+language: scala
 scala:
 - 2.11.8
-node_js:
-- node
 jdk:
 - oraclejdk8
+before_install:
+- sudo apt-get update -qq
+- sudo apt-get install -qq nodejs npm
 script:
-- sbt test
-- mvn install
-- gulp test
+- cd ~/backend && sbt test
+- cd ~/frontend && mvn install
+- cd ~/frontend && gulp test
