--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
 - sudo apt-get update -qq
 - sudo apt-get install -qq nodejs npm
 script:
-- cd ~/backend && sbt test
-- cd ~/frontend && mvn install
-- cd ~/frontend && gulp test
+- cd ./backend && sbt test
+- cd ./frontend && mvn install
+- cd ./frontend && gulp test
