--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
 - sudo apt-get install -qq nodejs npm
 script:
 - cd ./backend && sbt test
-- cd ../frontend && mvn install && gulp test
+- cd ../frontend && npm install && gulp test
