Maybe will work now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 - oraclejdk8
 before_install:
 - sudo apt-get update -qq
-- curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash sudo apt-get install -y nodejs
+- curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -sudo apt-get install -y nodejs
 - sudo apt-get install -qq npm
 script:
 - cd ./backend && sbt test
